# checkbox

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: database.py  settings.py
src/: main.py
src/api/v1/: auth_routers.py  receipt_routers.py  routers.py  user_routes.py  v1_routers.py
src/api/v1/auth/: endpoints.py
src/api/v1/receipts/: endpoints.py
src/core/: constants.py  dependencies.py  exceptions.py  models.py
src/core/filters/: receipt_filters.py
src/core/repositories/: base_repository.py  receipt_product_repository.py  receipt_repository.py  user_repository.py
src/core/schemas/: auth_schemas.py  receipt_schemas.py  user_schemas.py
src/core/services/: auth_service.py  base_service.py  receipt_service.py  user_service.py
src/core/utils/: jwt.py  parsers.py  password.py
src/core/utils/receipt/: receipt_txt_generator.py
src/migrations/: env.py
src/migrations/versions/: 1642d87bf4e7_add_important_indexes.py  25939382c298_add_receipt_products_and_user_company.py  c4b412b6c2cb_db_init.py
src/receipts/: constants.py  models.py
src/users/: constants.py  models.py
tests/: conftest.py  fixtures.py
tests/auth/: test_routers.py
tests/receipts/: test_routers.py
tests/users/: test_routers.py
